--- a/src/index.css
+++ b/src/index.css
@@ -1065,4 +1065,12 @@ a:hover {
     color: var(--text-main);
   }
 
+/* Animation Utilities */
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+.animation-delay-4000 {
+  animation-delay: 4s;
+}
+
 
